# lemniscus_open

./: .gitignore  .mcp.json  PRIVACY.md  README.md  auth.py  build_mcpb.sh  chunker.py  db.py  download_model.py  embedder.py  manifest.json  models.py  pipeline.py  pyproject.toml  requirements.txt  retrieval.py  server.py  setup.sh
docs/: index.html
parsers/: __init__.py  apple_health.py  garmin.py  generic_json.py  image.py  oura.py  pdf.py  text.py
server/: db.js  index.js  package-lock.json  package.json  parser.js
